<resources>
    <string name="app_name">WarPlan</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="exam">Concurso:</string>
    <string name="subject">Materia:</string>
    <string name="weight">Peso:</string>
    <string name="priority">Prioridade:</string>
    <string name="date">Data</string>
    <string name="duration_minutes">Duração em minutos</string>
    <string name="notes">Notas</string>
    <string name="exam_date">Data da prova</string>
    <string name="name_hint">Informe um nome</string>
    <string name="weight_hint">Informe o peso</string>
    <string name="save_button_text">Salvar</string>
    <string name="clear_button_text">Limpar</string>
    <string name="media_text">Média</string>
    <string name="media_hint">Informe a média</string>
    <string name="difficulty">Dificuldade percebida</string>
    <string name="radio_button_easy_text">Fácil</string>
    <string name="radio_button_hard_text">Difícil</string>
    <string name="check_box_priority_text">Marcar como prioritária</string>
    <string name="text_view_category_text">Área de conhecimento</string>
    <string name="select_option">Seleciona uma opção</string>
    <string name="portuguese">Português</string>
    <string name="mathematics">Matemática</string>
    <string name="sciences">Ciências</string>

    <string name="exam_pf">Polícia Federal (PF)</string>
    <string name="exam_prf">Polícia Rodoviária Federal (PRF)</string>
    <string name="exam_receita">Receita Federal</string>
    <string name="exam_inss">INSS</string>
    <string name="exam_tj">Tribunal de Justiça</string>
    <string name="exam_mp">Ministério Público</string>
    <string name="exam_bb">Banco do Brasil</string>
    <string name="exam_caixa">Caixa Econômica Federal</string>
    <string name="exam_correios">Correios</string>
    <string name="exam_pc">Polícia Civil</string>
    <string name="exam_pm">Polícia Militar</string>
    <string name="exam_dpu">Defensoria Pública</string>
    <string name="exam_senado">Senado Federal</string>
    <string name="exam_camara">Câmara dos Deputados</string>
    <string name="exam_tcu">Tribunal de Contas da União (TCU)</string>
    <string name="exam_trf">Tribunal Regional Federal (TRF)</string>
    <string name="exam_trt">Tribunal Regional do Trabalho (TRT)</string>
    <string name="exam_tre">Tribunal Regional Eleitoral (TRE)</string>
    <string name="exam_cgu">Controladoria-Geral da União (CGU)</string>
    <string name="exam_anvisa">Agência Nacional de Vigilância Sanitária (ANVISA)</string>

    <string name="exam_pf_description">Prova de Polícia Federal</string>
    <string name="exam_prf_description">Prova de Polícia Rodoviária Federal</string>
    <string name="exam_receita_description">Prova de Receita Federal</string>
    <string name="exam_inss_description">Prova de INSS</string>
    <string name="exam_tj_description">Prova de Tribunal de Justiça</string>
    <string name="exam_mp_description">Prova de Ministério Público</string>
    <string name="exam_bb_description">Prova de Banco do Brasil</string>
    <string name="exam_caixa_description">Prova de Caixa Econômica Federal</string>
    <string name="exam_correios_description">Prova de Correios</string>
    <string name="exam_pc_description">Prova de Polícia Civil</string>
    <string name="exam_pm_description">Prova de Polícia Militar</string>
    <string name="exam_dpu_description">Prova de Defensoria Pública</string>
    <string name="exam_senado_description">Prova de Senado Federal</string>
    <string name="exam_camara_description">Prova de Câmara dos Deputados</string>
    <string name="exam_tcu_description">Prova de Tribunal de Contas da União (TCU)</string>
    <string name="exam_trf_description">Prova de Tribunal Regional Federal (TRF)</string>
    <string name="exam_trt_description">Prova de Tribunal Regional do Trabalho (TRT)</string>
    <string name="exam_tre_description">Prova de Tribunal Regional Eleitoral (TRE)</string>
    <string name="exam_cgu_description">Prova de Controladoria-Geral da União (CGU)</string>
    <string name="exam_anvisa_description">Prova de Agência Nacional de Vigilância Sanitária
        (ANVISA)</string>

    <string name="priority_low">Baixa</string>
    <string name="priority_medium">Média</string>
    <string name="priority_high">Alta</string>
    <string name="exam_clicked">Concurso de nome %1$s foi clicado</string>
    <string name="exam_long_clicked">Clique longo no concurso de nome %1$s</string>

    <!-- Create Exam Activity -->
    <string name="exam_name_label">Nome do Concurso</string>
    <string name="exam_description_label">Descrição do Concurso</string>
    <string name="exam_date_label">Data do Concurso</string>
    <string name="exam_name_hint">Digite o nome do concurso</string>
    <string name="exam_description_hint">Digite a descrição do concurso</string>
    <string name="exam_date_hint">Selecione a data do concurso</string>
    <string name="create_exam_button">Criar Concurso</string>
    <string name="save_exam_button">Salvar Concurso</string>
    <string name="create_new_exam_button">Criar Novo Concurso</string>
    <string name="create_exam_title">Criar Concurso</string>

    <!-- Validation messages -->
    <string name="error_exam_name_required">Informe o nome do concurso</string>
    <string name="error_exam_description_required">Informe a descrição do concurso</string>
    <string name="error_exam_date_required">Informe a data do concurso</string>
    <string name="error_exam_date_invalid">Selecione uma data válida</string>
    <string name="exam_saved_success">Concurso salvo: %1$s</string>
    <string name="exam_created_success">Concurso criado: %1$s</string>
    <string name="exams_title">Concursos</string>

    <!-- About Activity -->
    <string name="about_title">Sobre o App</string>
    <string name="utfpr_name">Universidade Tecnológica Federal do Paraná</string>
    <string name="utfpr_logo_description">Logo da UTFPR</string>
    <string name="app_logo_description">Logo do WarPlan</string>
    <string name="app_description">O WarPlan é um aplicativo desenvolvido para auxiliar estudantes
        na organização e planejamento de estudos para concursos públicos. Com ele, você pode
        cadastrar concursos, gerenciar matérias de estudo, definir prioridades e acompanhar seu
        progresso de forma eficiente e organizada.</string>
    <string name="author_info_title">Informações do Desenvolvedor</string>
    <string name="student_name_label">ALUNO</string>
    <string name="student_name">Luan Coelho</string>
    <string name="course_label">CURSO</string>
    <string name="course_name">Engenharia de Software</string>
    <string name="email_label">E-MAIL</string>
    <string name="student_email">luancoelho@alunos.utfpr.edu.br</string>
    <string name="about">Sobre</string>
</resources>