<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Nome do Concurso -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_name_label"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextExamName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/exam_name_hint"
        android:inputType="text" />

    <!-- Descrição do Concurso -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_description_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextExamDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_description_hint"
        android:inputType="textMultiLine"
        android:layout_marginTop="8dp"
        android:minLines="3" />

    <!-- Data do Concurso -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_date_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextExamDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/exam_date_hint"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonSaveExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_exam_button"
        android:layout_marginTop="24dp" />

</LinearLayout>